[package]
name = "listenmoe"
description = "Anime/Japanese Radio powered by LISTEN.moe!"
repository = "https://github.com/noobping/listenmoe-gnome-app"
license = "MIT"
homepage = "https://listen.moe/"
authors = ["noobping"]
version = "0.1.4"
edition = "2021"

[package.metadata]
issue-tracker = "https://github.com/noobping/listenmoe-gnome-app/issues"
discord = "https://listen.moe/discord"

[features]
setup = ["dirs"]

[dependencies]
rodio = { version = "^0.21.1", default-features = false, features = ["playback"] }
symphonia = { version = "^0.5.5", features = ["ogg", "vorbis"] }
reqwest = { version = "^0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots"] }
gtk = { version = "^0.10", package = "gtk4", features = ["gnome_48"] }
adw = { version = "^0.8.0", package = "libadwaita", features = ["v1_8"] }
serde_json = "^1.0.145"
dirs = { version = "^6.0.0", optional = true}
serde = "^1.0.228"
tungstenite = { version = "^0.28.0", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }

[build-dependencies]
glib-build-tools = "^0.21.0"
toml = "^0.9.8"
